--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
     <string name="title_activity_periods">Periods</string>
     <string name="title_activity_assignment_viewing">AssignmentViewing</string>
 </resources>
